# Senior-Design-Fly-Gantry-Drexel-2026

./: .gitignore  camera_points.csv
DLP-ALC-LIGHTCRAFTER-SDK/: CMakeLists.txt  DLP_SDK-config.cmake.in
DLP-ALC-LIGHTCRAFTER-SDK/doc/other/: how_to_dlp_sdk.h  how_to_opencv.h
DLP-ALC-LIGHTCRAFTER-SDK/examples/: camera_view_opencv.cpp  camera_view_pg_flycap2_c.cpp  generate_graycode_patterns.cpp  image_file_io.cpp  image_window.cpp  point_cloud_viewer.cpp
DLP-ALC-LIGHTCRAFTER-SDK/examples/parameter_file_io/: Makefile
DLP-ALC-LIGHTCRAFTER-SDK/examples/parameter_load_save/: Makefile  parameter_load_and_update.cpp  parameters_module_2.txt
DLP-ALC-LIGHTCRAFTER-SDK/include/common/capture/: capture.hpp
DLP-ALC-LIGHTCRAFTER-SDK/include/dlp_platforms/lightcrafter_3000/: lcr3000.hpp  lcr3000_definitions.hpp
DLP-ALC-LIGHTCRAFTER-SDK/include/dlp_platforms/lightcrafter_6500/: dlpc900_api.hpp  dlpc900_image.hpp  dlpc900_usb.hpp  lcr6500.hpp
DLP-ALC-LIGHTCRAFTER-SDK/include/geometry/: geometry.hpp
DLP-ALC-LIGHTCRAFTER-SDK/include/structured_light/: structured_light.hpp
DLP-ALC-LIGHTCRAFTER-SDK/src/calibration/: calibration_data.cpp  calibration_projector.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/camera/: camera.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/camera/opencv_cam/: opencv_cam.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/camera/pg_flycap2/: pg_flycap2_c.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/common/: disparity_map.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/common/capture/: capture.cpp  capture_sequence.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/common/image/: image.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/common/point_cloud/: point_cloud.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/dlp_platforms/lightcrafter_4500/: lcr4500.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/dlp_platforms/lightcrafter_6500/: dlpc900_image.cpp
DLP-ALC-LIGHTCRAFTER-SDK/src/geometry/: geometry.cpp
gantry/experiments/cameras/: CMakeLists.txt  build_detect.bat  build_dual.bat  camera_alignment_crosshair.py  camera_alignment_grid.py  camera_fov_notes.txt  dual_basler_display.cpp  mapping.m  projector_camera_mapping.m
gantry/experiments/gantry/: docs.txt  gantry.cpp  gantry.h  test_gantry.cpp
gantry/experiments/gantry/zaber/motion/: ascii.h  binary.h  gcode.h  includes.h  library.h  library_exception.h  microscopy.h  product.h  tools.h  unit_table.h  variant_test_api.h  version.h
gantry/experiments/gantry/zaber/motion/ascii/: all_axes.h  axis.h  axis_group.h  axis_settings.h  axis_storage.h  connection.h  device.h  device_io.h  device_settings.h  device_storage.h  lockstep.h  oscilloscope.h  oscilloscope_data.h  pvt.h  pvt_buffer.h  pvt_io.h  pvt_sequence.h  servo_tuner.h  setting_constants.h  stream.h  stream_buffer.h  stream_io.h  streams.h  transport.h  trigger.h  triggers.h  warning_flags.h  warnings.h
gantry/experiments/gantry/zaber/motion/binary/: connection.h  device.h  (+1 more)
gantry/experiments/projector/: README.md  calibration_test.cpp  camera_to_projector_matrix.csv  document.cpp  project_4500
gantry/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/: CMakeLists.txt  DLP_SDK_Documentation.html
gantry/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/examples/: camera_config_pg_flycap2_c.cpp  returncodes_example.cpp
gantry/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/: dlp_sdk.hpp
gantry/experiments/projector/build_sdk/: DLP_SDK-config.cmake
gantry/experiments/zaber/: test.cpp
gantry/fly_gantry_v2/: .gitignore  BUILD.md  BinarySaveData.h  CMakeLists.txt  Calibration.cpp  MatlabSaveData.cpp  OptoCenter.txt  OptoProbPlume.txt  OptoSlope.old.txt  OptoSlope.txt  OptoStim.Template.cpp  USB4.h  build.bat  filter.h  gantry.cpp  gantry.h  gantrycodeV2.cpp  gantrycodeV2.vcxproj.filters  matlab_i18n_init.c  output.txt  position.h  stimOnStateTimestampDebug.txt  topCamProc.cpp
gantrycodeV2/: BinarySaveData.cpp  Calibration.h  Config.cpp  Config.h  HardwareTriggerConfiguration.h  MatlabSaveData.h  OptoCenter.old.txt  OptoCrudePlume.txt  OptoPatternFromFile.txt  OptoProbPlumeOld.txt  OptoPulses.txt  OptoStim.cpp  OptoStim.h  OptoStimTemplate.h  OptoWhiteNoise.txt  WindowManager.cpp  WindowManager.h  filter.cpp  flyViewStruc.h  fulltrain.txt  gantrycodeV2.cpp  gantrycodeV2.sln  gantrycodeV2.txt  gantrycodeV2.vcxproj  matlab_i18n_init.h  offTimeCounterDebug.txt  position.cpp  reptrain.txt  stimStateBoolDebug.txt  topCamProc.h
gantrycodeV2/experiments/: CMakeLists.txt  CMakeLists_dual.txt  DUAL_BASLER_README.md  DUAL_CAMERA_README.md  OVERVIEW.md  README.md  bottom_camera_display.cpp  build.bat  build_dual.bat  dual_basler_display.cpp  install_dependencies.bat  install_dependencies.ps1  run_camera.bat  run_dual_basler.bat  verify_setup.bat
gantrycodeV2/experiments/cameras/: CMakeLists_dual.txt  build_dual.bat  detect_basler_cameras.py
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/doc/other/: calibration_board.h
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/examples/: generate_structured_light_patterns.cpp  image_pixels.cpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/examples/parameter_load_save/: parameters_module_1.txt
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/camera/pg_flycap2/: pg_flycap2_c.hpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/common/: disparity_map.hpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/common/point_cloud/: point_cloud.hpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/dlp_platforms/lightcrafter_3000/: lcr3000_defaults.hpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/dlp_platforms/lightcrafter_6500/: error.hpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/include/structured_light/three_phase/: three_phase.hpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/src/common/: other.cpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/src/common/point_cloud/: point_cloud_window.cpp
gantrycodeV2/experiments/projector/DLP-ALC-LIGHTCRAFTER-SDK/src/dlp_platforms/lightcrafter_6500/: dlpc900_usb.cpp  lcr6500.cpp
(+210 files in other folders)
